static assets now working the same as the CMDR J setup

--- a/src/main/resources/ui/html/editor.html
+++ b/src/main/resources/ui/html/editor.html
@@ -1,9 +1,8 @@
-<!doctype html>
 <html lang="en">
     <head>
-        <script src="../js/ui.js"></script>
+        <script src="/editor.js"></script>
     </head>
 <body>
 
 </body>
-</html>>
+</html>
