--- a/src/main/resources/ui/html/editor.html
+++ b/src/main/resources/ui/html/editor.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/editor.css">
         <script src="/editor.js"></script>
     </head>
 <body>
