--- a/src/main/resources/ui/html/editor.html
+++ b/src/main/resources/ui/html/editor.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/editor.css">
-        <script src="/editor.js"></script>
+        <link rel="stylesheet" href="editor.css">
+        <script src="editor.js"></script>
     </head>
 <body>
 
