--- a/src/main/resources/ui/html/editor.html
+++ b/src/main/resources/ui/html/editor.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="editor.css">
-        <script src="editor.js"></script>
-    </head>
+<head>
+    <title>BVGE Editor</title>
+    <script>
+        const features = "width=400,height=800,popup=true,toolbar=no,menubar=no,scrollbars=no,resizable=yes";
+        window.open("/stats.html", "Stats", features)
+    </script>
+</head>
 <body>
-    <main id="main">
-    </main>
 </body>
 </html>
