--- a/src/main/resources/ui/html/editor.html
+++ b/src/main/resources/ui/html/editor.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <title>BVGE Editor</title>
-    <script>
-        const features = "width=400,height=800,popup=true,toolbar=no,menubar=no,scrollbars=no,resizable=yes";
-        window.open("/stats.html", "Stats", features)
-    </script>
+    <link rel="stylesheet" href="editor.css">
+    <script src="editor.js"></script>
+<!--    <script>-->
+<!--        const features = "width=400,height=800,popup=true,toolbar=no,menubar=no,scrollbars=no,resizable=yes";-->
+<!--        window.open("/stats.html", "Stats", features)-->
+<!--    </script>-->
 </head>
 <body>
+    <main id="main">
+    </main>
+    <div id="inventory">
+    </div>
 </body>
 </html>
+
